fixing html file path

--- a/question-html/index.html
+++ b/question-html/index.html
@@ -32,7 +32,7 @@
 
     <header class="flex justify-between px-6 items-center bg-white rounded-2xl h-fit py-6">
         <div class="left flex justify-center items-center gap-4">
-            <div><img class="header-img-size" src="./assets/logo.png" alt="logo"></div>
+            <div><img class="header-img-size" src="../assets/logo.png" alt="logo"></div>
             <h1 class="font-poppins font-light header-text-size">Dev<span class="font-bold">Board</span></h1>
         </div>
 
@@ -47,7 +47,7 @@
         <div class="bg-white rounded-xl mb-4">
             <h4 class="font-bold text-2xl p-6">Question-1: What are the different way to select an element in dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium text-2xl p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium text-2xl p-6 opacity-70">There are many different ways like using id(getElementById) , class(getElementsByClassName), tagname(getElementsByTagName), queryselectors(querySelector,querySelectorAll). For selecting multiple element use tagname or class or querySelectorAll.We often use the id and querySelectors.</p>
         </div>
 
         <div class="bg-white rounded-xl mb-4">
@@ -69,7 +69,7 @@
             <p class="font-medium text-2xl p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
         </div>
     </div>
-    <script src="./script/question.js"></script>
+    <script src="../script/question.js"></script>
 </body>
 
 </html>
