--- a/question-html/index.html
+++ b/question-html/index.html
@@ -13,8 +13,8 @@
         }
 
         .header-text-size {
-            font-size: clamp(1.5rem, 0.875rem + 2vw, 2rem);
-            ;
+            font-size: clamp(1rem, 0.8148rem + 0.9877vw, 2rem);
+            
         }
 
         .header-img-size {
@@ -37,36 +37,36 @@
         </div>
 
         <div>
-            <button id="change-page-2" class="bg-blue-500 py-3 px-5 text-white rounded-lg font-bold">Back to Desk</button>
+            <button id="change-page-2" class="bg-blue-500 py-3 px-5 text-white rounded-lg font-bold text-xs sm:text-2xl">Back to Desk</button>
         </div>
     </header>
 
     <h4 class="text-center font-bold text-4xl mt-8 mb-8">Blog</h4>
 
     <div>
-        <div class="bg-white rounded-xl mb-4">
-            <h4 class="font-bold text-2xl p-6">Question-1: What are the different way to select an element in dom?</h4>
+        <div class="bg-white rounded-xl mb-4 overflow-auto">
+            <h4 class="font-bold header-text-size p-6">Question-1: What are the different way to select an element in dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium text-2xl p-6 opacity-70">There are many different ways like using id(getElementById) , class(getElementsByClassName), tagname(getElementsByTagName), queryselectors(querySelector,querySelectorAll). For selecting multiple element use tagname or class or querySelectorAll.We often use the id and querySelectors.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">There are many different ways like using id(getElementById) , class(getElementsByClassName), tagname(getElementsByTagName), queryselectors(querySelector,querySelectorAll). For selecting multiple element use tagname or class or querySelectorAll.We often use the id and querySelectors.</p>
         </div>
 
-        <div class="bg-white rounded-xl mb-4">
-            <h4 class="font-bold text-2xl p-6">Question-2: What is the different between innerHTML, innerText and textContent?</h4>
+        <div class="bg-white rounded-xl mb-4 overflow-auto">
+            <h4 class="font-bold header-text-size p-6">Question-2: What is the different between innerHTML, innerText and textContent?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium text-2xl p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
         </div>
 
 
-        <div class="bg-white rounded-xl mb-4">
-            <h4 class="font-bold text-2xl p-6">Question-3: What is event delegation in the dom?</h4>
+        <div class="bg-white rounded-xl mb-4 overflow-auto">
+            <h4 class="font-bold header-text-size p-6">Question-3: What is event delegation in the dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium text-2xl p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
         </div>
 
-        <div class="bg-white rounded-xl mb-4">
-            <h4 class="font-bold text-2xl p-6">Question-4: What is event bubbling in the dom?</h4>
+        <div class="bg-white rounded-xl mb-4 overflow-auto">
+            <h4 class="font-bold header-text-size p-6">Question-4: What is event bubbling in the dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium text-2xl p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
         </div>
     </div>
     <script src="../script/question.js"></script>
