--- a/question-html/index.html
+++ b/question-html/index.html
@@ -14,7 +14,7 @@
 
         .header-text-size {
             font-size: clamp(1rem, 0.8148rem + 0.9877vw, 2rem);
-            
+
         }
 
         .header-img-size {
@@ -37,7 +37,8 @@
         </div>
 
         <div>
-            <button id="change-page-2" class="bg-blue-500 py-3 px-5 text-white rounded-lg font-bold text-xs sm:text-2xl">Back to Desk</button>
+            <button id="change-page-2"
+                class="bg-blue-500 py-3 px-5 text-white rounded-lg font-bold text-xs sm:text-2xl">Back to Desk</button>
         </div>
     </header>
 
@@ -45,28 +46,63 @@
 
     <div>
         <div class="bg-white rounded-xl mb-4 overflow-auto">
-            <h4 class="font-bold header-text-size p-6">Question-1: What are the different way to select an element in dom?</h4>
+            <h4 class="font-bold header-text-size p-6">Question-1: What are the different way to select an element in
+                dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium header-text-size p-6 opacity-70">There are many different ways like using id(getElementById) , class(getElementsByClassName), tagname(getElementsByTagName), queryselectors(querySelector,querySelectorAll). For selecting multiple element use tagname or class or querySelectorAll.We often use the id and querySelectors.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">Different ways to select an element in dom
+
+                using id -- getElementById
+                using class -- getElementsByClassName
+                using tagname -- getElementsByTagName
+                using queryselector -- querySelector, querySelectorAll
+
         </div>
 
         <div class="bg-white rounded-xl mb-4 overflow-auto">
-            <h4 class="font-bold header-text-size p-6">Question-2: What is the different between innerHTML, innerText and textContent?</h4>
+            <h4 class="font-bold header-text-size p-6">Question-2: What is the different between innerHTML, innerText
+                and textContent?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium header-text-size p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium header-text-size p-6 opacity-70"><span class="font-bold">innerHTML</span> are used to
+                get and set the html value of an element.
+                <span class="font-bold"> innerText </span> are used to get and set the text content of an element by
+                ignoring hidden elements.
+                <span class="font-bold">textContent</span> are used to get and set the text content of an element
+                including all child node.
+
+            </p>
         </div>
 
 
         <div class="bg-white rounded-xl mb-4 overflow-auto">
             <h4 class="font-bold header-text-size p-6">Question-3: What is event delegation in the dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium header-text-size p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">Event delegation is a technique where I can add event
+                listener only on parent and it will work for all the child element of the parent.
+                The event listener utilizes event bubbling to handle events on dynamically added or existing child
+                elements.
+                Using event.target, I can identify the specific child where I want to perform the event</p>
         </div>
 
         <div class="bg-white rounded-xl mb-4 overflow-auto">
             <h4 class="font-bold header-text-size p-6">Question-4: What is event bubbling in the dom?</h4>
             <hr class="border-dashed border-slate-500" />
-            <p class="font-medium header-text-size p-6 opacity-70">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis optio accusantium soluta, repellat aspernatur nesciunt.</p>
+            <p class="font-medium header-text-size p-6 opacity-70">Event bubbling is a javascript concept.It happens
+                when an element receives an event , and that event bubbles up to its parent and ancestor element until
+                it go to the root element</p>
+        </div>
+
+        <div class="bg-white rounded-xl mb-4 overflow-auto">
+            <h4 class="font-bold header-text-size p-6">Question-5: How do you create, add, and remove elements using JavaScript?</h4>
+            <hr class="border-dashed border-slate-500" />
+            <p class="font-medium header-text-size p-6 opacity-70">To create Elements I will use document.createElement(). After creating an element I can use innerHTML or innerText or innerContent.
+                Adding Elements -----
+                appendChild() -- adds as last child.
+                append() -- can add multiple elements and text.
+                prepend() -- adds as first child.
+                Removing Elements: After Adding element, one can use those method to remove.
+                remove() -- removes an element directly.
+                removeChild() -- removes a child from a p.
+            </p>
         </div>
     </div>
     <script src="../script/question.js"></script>
