--- a/question-html/index.html
+++ b/question-html/index.html
@@ -88,7 +88,7 @@
             <hr class="border-dashed border-slate-500" />
             <p class="font-medium header-text-size p-6 opacity-70">Event bubbling is a javascript concept.It happens
                 when an element receives an event , and that event bubbles up to its parent and ancestor element until
-                it go to the root element</p>
+                it go to the root element. To stop bubbling we use stopPropagation()</p>
         </div>
 
         <div class="bg-white rounded-xl mb-4 overflow-auto">
